# Archivist

./: .gitignore  Makefile  README.md
archivist-backend/: .env.example  .gitignore  README.md  pyproject.toml
archivist-backend/app/: auth.py  database.py  main.py
archivist-backend/app/models/: __init__.py  archive.py  box.py  category.py  folder.py  location.py  retention_code.py  user.py
archivist-backend/app/routes/: __init__.py  admin.py  archives.py  auth.py  boxes.py  categories.py  folders.py  imports.py  labels.py  locations.py  retention_codes.py  stats.py  users.py
archivist-backend/app/schemas/: __init__.py  archive.py  box.py  category.py  folder.py  location.py  retention_code.py  user.py
archivist-backend/app/templates/: box_label_template.docx  folder_labels_template.docx
archivist-frontend/: README.md  package-lock.json  package.json
archivist-frontend/src/: App.tsx
archivist-frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
archivist-frontend/src/components/ui/: badge.tsx  card.tsx  checkbox.tsx  dataTable.tsx  dialog.tsx  input.tsx  popover.tsx  select.tsx  table.tsx
archivist-frontend/src/contexts/: AuthContext.tsx
archivist-frontend/src/lib/: api.ts  audit.ts  userDisplay.ts
archivist-frontend/src/pages/: Archives.tsx  Boxes.tsx  ChangePassword.tsx  Codes.tsx  Dashboard.tsx  Folders.tsx  Imports.tsx  Locations.tsx  Login.tsx  Settings.tsx  Users.tsx
