[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.3"}
sqlalchemy = "^2.0.49"
pyodbc = "^5.1.0"
python-dateutil = "^2.9.0.post0"
python-multipart = "^0.0.24"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
dotenv = "^0.9.9"
argon2-cffi = "^25.1.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
python-docx = "^1.2.0"
docxtpl = "^0.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
